微调范围伤害武器的攻击实体数量上限。